[package]
name = "gentoken"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
chrono = "0.4.38"
jwt = {package = "jsonwebtoken", version = "9.3"}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
